# kunai

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  readme.md
.github/workflows/: linux.yml  osx.yml  sources.yml  win.yml
cmake/: cpp17_toolchains.cmake  sqlite3.cmake
doc/: ninja_deps.hexpat
src/: main.cpp
src/app/: app.cpp  app.h
src/app/headers/: defs.hpp  kunaiBuild.h
src/app/interfaces/: i_cmake_entry_wirter.h  i_ninja_build_writer.h  i_ninja_deps_writer.h
src/app/loader/: loader.cpp  loader.h
src/app/model/: database_writer.h  model.cpp  model.h
src/app/parsers/: build_parser.cpp  build_parser.h  cmake_reply_parser.cpp  cmake_reply_parser.h  deps_parser.cpp  deps_parser.h
src/app/parsers/cmake/: reply_parser.cpp  reply_parser.h
src/app/parsers/ninja/: build_parser.cpp  build_parser.h  deps_parser.cpp  deps_parser.h
